k8s/infrastructure/minio-ghost.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: ExternalName
  externalName: localhost
