k8s/infrastructure/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: shared-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  # Check the 'admin' db, and use the password
                  PGPASSWORD=$POSTGRES_PASSWORD pg_isready -U admin -d admin -h 127.0.0.1
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  PGPASSWORD=$POSTGRES_PASSWORD pg_isready -U admin -d admin -h 127.0.0.1
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: lidarc-pvc
