k8s/infrastructure/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
spec:
  ports:
    - port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis-cache
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: redis
          image: redis:8.4
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: shared-data
              mountPath: /data
              subPath: redis
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: lidarc-pvc
